--- a/mototorque/pom.xml
+++ b/mototorque/pom.xml
@@ -65,7 +65,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.30</version> <!-- albo nowsza -->
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
