--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -6,18 +6,18 @@
   "background_color": "#111111",
   "theme_color": "#111111",
   "icons": [
-    {"src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png"}
+    {"src": "./icons/icon-192.png", "sizes": "192x192", "type": "image/png"},
+    {"src": "./icons/icon-512.png", "sizes": "512x512", "type": "image/png"}
   ],
   "screenshots": [
     {
-      "src": "/screenshots/home-wide.png",
+      "src": "./screenshots/home-wide.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/screenshots/home-narrow.png",
+      "src": "./screenshots/home-narrow.png",
       "sizes": "390x844",
       "type": "image/png",
       "form_factor": "narrow"
