--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,17 +1,17 @@
 {
   "name": "MotoTorque",
   "short_name": "MotoTorque",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#111111",
   "theme_color": "#111111",
   "icons": [
-    {"src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png"},
-    {"src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png"}
+    {"src": "./icons/icon-192.png", "sizes": "192x192", "type": "image/png"},
+    {"src": "./icons/icon-512.png", "sizes": "512x512", "type": "image/png"}
   ],
   "screenshots": [
     {
-      "src": "/screenshots/home-wide.png",
+      "src": "./screenshots/home-wide.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide"
